[project]
name = "repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.3",
    "flask-assets>=2.1.0",
    "httpx>=0.27.2",
    "schedule>=1.2.2",
    "jsmin>=3.0.1",
    "striprtf>=0.0.26",
    "oracledb>=2.4.1",
    "sqlalchemy>=2.0.36",
    "python-dotenv>=1.0.1",
    "pymssql>=2.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
